--- a/style.css
+++ b/style.css
@@ -228,31 +228,38 @@ time, mark, audio, video {
 
 body {
   height: 100vh;
-  font-family: 'Gochi Hand', cursive; }
+  font-family: 'Gochi Hand', cursive;
+  background-color: #f2f2f2; }
 
 ul {
   list-style: none;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  align-items: center;
+  height: 4em;
+  background-color: #ffffff; }
   ul li {
-    margin: 2em; }
+    margin: 2em 1em;
+    padding: 0.5em 1.5em; }
     ul li a {
       text-decoration: none;
       color: #333333;
-      font-size: 2em; }
+      font-size: 1.3em; }
       ul li a:hover {
-        padding: 0.25em 0.5em;
-        background-color: #ffbf00;
-        border-radius: 0.2em; }
+        color: #999999; }
+
+.divider {
+  width: 1px;
+  height: 2em;
+  background-color: #e6e6e6; }
 
 .post_it_container {
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center; }
   .post_it_container .post_it {
-    width: 30em;
-    height: 30em;
+    width: 29em;
+    height: 29em;
     margin: 4em;
     padding: 2em;
     background-color: #ffd900; }
