--- a/_base.scss
+++ b/_base.scss
@@ -19,6 +19,7 @@ ul {
   justify-content: center;
   align-items: center;
   height: 4em;
+  width: 100%;
   background-color: $white;
   li {
     margin: 2em 1em;
@@ -44,11 +45,12 @@ ul {
 
 .post_it_container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   .post_it {
-    width: 29em;
-    height: 29em;
+    width: 30em;
+    height: 30em;
     margin: 4em;
     padding: 2em;
     background-color: $yellow;
@@ -120,6 +122,11 @@ form {
 :-moz-placeholder {
   color: $black80;
   opacity: 1;
+}
+
+.post_it_opslag_container {
+  display: flex;
+  justify-content: center;
 }
 
 .post_it_opslag {
