--- a/style.css
+++ b/style.css
@@ -237,6 +237,7 @@ ul {
   justify-content: center;
   align-items: center;
   height: 4em;
+  width: 100%;
   background-color: #ffffff; }
   ul li {
     margin: 2em 1em;
@@ -255,11 +256,12 @@ ul {
 
 .post_it_container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center; }
   .post_it_container .post_it {
-    width: 29em;
-    height: 29em;
+    width: 30em;
+    height: 30em;
     margin: 4em;
     padding: 2em;
     background-color: #ffd900; }
@@ -316,6 +318,10 @@ form fieldset {
 :-moz-placeholder {
   color: #333333;
   opacity: 1; }
+
+.post_it_opslag_container {
+  display: flex;
+  justify-content: center; }
 
 .post_it_opslag {
   width: 20em;
